--- a/src/todo-list.html
+++ b/src/todo-list.html
@@ -23,13 +23,13 @@
                     TODO:
                 </th>
                 <th style="border-bottom:1px solid #444444;">
-                    <input type="text" id="input" style=" width:100%">
+                    <input type="text" id="inputNewTodo" style=" width:100%">
                 </th>
                 <th style="border-bottom:1px solid #444444;width:55px; padding-left:5px;">
-                    <input type="button" onclick="getTodo()" value="+New" style="text-align:left;width:45px;padding-left:2px;">
+                    <input type="button" id = "buttonNewTodo" onclick="getTodo()" value="+New" style="text-align:left;width:45px;padding-left:2px;">
                 </th>
             </thead>
-            <tbody id="c">
+            <tbody id="tbodyNewTodo">
 
             </tbody>
         </table>
@@ -41,7 +41,7 @@
             // newTdChk.setAttribute("style", "width:1px; border:1px solid  #444444")
             var newChk = document.createElement("input");
             var newTdText = document.createElement("td");
-            var inputValue = document.getElementById("input").value;
+            var inputValue = document.getElementById("inputNewTodo").value;
             var newContent = document.createTextNode(inputValue);
 
             newChk.setAttribute("type", "checkbox")
@@ -53,7 +53,7 @@
             newTr.appendChild(newTdChk);
             newTr.appendChild(newTdText);
 
-            document.getElementById("c").appendChild(newTr);
+            document.getElementById("tbodyNewTodo").appendChild(newTr);
 
         }        
     </script>
