--- a/src/todo-list.html
+++ b/src/todo-list.html
@@ -21,10 +21,10 @@
                     TODO:
                 </th>
                 <th>
-                    <input type="text" id="inputNewTodo" onkeydown="keyDownEnter()">
+                    <input type="text" id="inputNewTodo">
                 </th>
                 <th class="button">
-                    <input type="button" id="buttonNewTodo" onclick="generateTodo()" value="+New">
+                    <input type="button" id="buttonNewTodo" value="+New">
                 </th>
             </thead>
             <tbody id="tbodyNewTodo">
@@ -46,84 +46,103 @@
         </table>
     </div>
     <script lang="javascript">
+        // 구조를 다르게 가져갈거임
+        /* arrToDo = {
+            key : {
+                content: 'text'
+                result: true||false
+            }
+        }*/
+        var arrToDo = {};
+
+        // Load LocalStorage 
         var loadArrToDo = function () {
-            for (var i = 0; i < localStorage.length; i++) {
-                if (localStorage.getItem(i) != null) {
-                    arrToDo[i] = localStorage.getItem(i);
-                    generateTodo(i);
-                };
+            var localData = window.localStorage.getItem('todoList')
+
+            if(localData){
+                arrToDo = JSON.parse(localData)
+                var arrKeys =  Object.keys(arrToDo)
+                for (let index = 0; index < arrKeys.length; index++) {
+                    const element = arrToDo[arrKeys[index]];
+                    generateTodo(element);    
+                }
+                
             }
         }
 
-        var generateTodo = function (i) {
+        var keyDownEnter = function (e) {
+            e.keyCode === 13 && handleAddList(e.target)
+        }
+
+        var handleAddList = function(target){
+            generateTodo(target.value)
+            target.value = ''
+        }
+
+        // 일단은 한줄 만드는 로직으로 만듬 
+        // 하나의  Functon에서 다 해결하려는 것은 좋지 못함
+        // 인자는 index를 넘기는 건 좋지 못함
+        var generateTodo = function (newValue) {
             var newTr = document.createElement("tr");
             var newTd = document.createElement("td");
             var newCheckbox = document.createElement("input");
-            var index;
-            var inputValue;
-
-            if (i == null) {
-                inputValue = document.getElementById("inputNewTodo").value;
-                index = arrToDo.length;
-                arrToDo[index] = inputValue;
-            }
-            if (i != null) {
-                index = i;
-                inputValue = arrToDo[i];
-            }
-
-
-            document.getElementById("inputNewTodo").value = "";
-
-            var newContent = document.createTextNode(inputValue);
+            var newContent = document.createTextNode(newValue);
 
             newCheckbox.setAttribute("type", "checkbox");
             newCheckbox.addEventListener("click", moveToDo);
 
-            newTr.setAttribute("id", index);
+            newTr.setAttribute("id", Object.keys(arrToDo).length + '_' + newValue);
             newTd.setAttribute("colspan", "3");
 
             newTd.appendChild(newCheckbox);
             newTd.appendChild(newContent);
             newTr.appendChild(newTd);
 
+            arrToDo[Object.keys(arrToDo).length + '_' + newValue] = newValue
+
             document.getElementById("tbodyNewTodo").appendChild(newTr);
+
+            // 다른 용도 인듯 함
+            // if (i != null) {
+            //     index = i;
+            //     inputValue = arrToDo[i];
+            // }
         }
 
         var moveToDo = function (e) {
-            var checkbox = e.currentTarget;
-            // console.log(checkbox.parentNode);
+            var todoList = ['tbodyNewTodo', 'tbodyDoneTodo']
+            var checkbox = e.target;
             var parentId = checkbox.parentNode.parentNode.parentNode.getAttribute("id");
-            console.log(parentId);
-            if (parentId == "tbodyNewTodo") {
-                moveNewToDone(checkbox);
-            }
-            if (parentId == "tbodyDoneTodo") {
-                moveDoneToNew(checkbox);
-            }
+            var targetId = todoList[Math.abs(todoList.indexOf(parentId)-1)]
+
+            document.getElementById(targetId).appendChild(checkbox.parentNode.parentNode);
         }
+
+        //위에서 하나도 퉁
         var moveNewToDone = function (newCheckbox) {
             document.getElementById("tbodyDoneTodo").appendChild(newCheckbox.parentNode.parentNode);
         }
+        //위에서 하나도 퉁
         var moveDoneToNew = function (doneCheckbox) {
             document.getElementById("tbodyNewTodo").appendChild(doneCheckbox.parentNode.parentNode);
         }
 
         var removeTodo = function () {
             var tbodyDoneTodo = document.getElementById("tbodyDoneTodo");
-            while (tbodyDoneTodo.lastChild.nodeName == "TR") {
-                var index = tbodyDoneTodo.lastElementChild.id;
+            var children = tbodyDoneTodo.children
 
-                delete arrToDo[index];
-                tbodyDoneTodo.lastElementChild.remove();
+            while (children.length > 0) {
+                delete arrToDo[children[children.length-1].getAttribute('id')]
+                children[children.length-1].remove();
             }
         }
 
         var saveRearrangedTodo = function () {
-            localStorage.clear();
-            arrToDo.filter(x => x);
-            saveArrToDo();
+            // window.localStorage.removeItem('todoList')
+            window.localStorage.setItem('todoList', JSON.stringify(arrToDo))
         }
+
+        //필요없어 보임
         var saveArrToDo = function () {
             for (var i = 0; i < arrToDo.length; i++) {
                 if (arrToDo[i] != null) {
@@ -131,14 +150,10 @@
                 }
             }
         }
-        var keyDownEnter = function () {
-            var keyCode = event.keyCode;
-            if (keyCode == 13) {
-                generateTodo();
-            }
-        }
-        var arrToDo = new Array();
+       
         window.onload = loadArrToDo();
+        document.getElementById("inputNewTodo").addEventListener('keydown', keyDownEnter)
+        document.getElementById("buttonNewTodo").addEventListener('click', function(){ handleAddList(document.getElementById('inputNewTodo'))})
     </script>
 </body>
 
